2006-03-22  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/measure.dynamics.R (measure.dynamics.id) :
	added
	* interfaces/R/src/rinterface.c (R_igraph_measure_dynamics_id) : added

2006-03-20  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/src/rinterface.c (R_igraph_interrupt_handler) :
	free memory before returning after interruption for unix systems

2006-03-18  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/motifs.R (graph.motifs.no) : added
	* interfaces/R/src/rinterface.c (R_igraph_motifs_randesu_no) : added

	* interfaces/R/src/rinterface.c (R_igraph_oldinterrupt)
	(R_igraph_interrupt_handler) : added
	(R_igraph_before, R_igraph_after) : added interruption handling

2006-03-12  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/structural.properties.R 
	(farthest.points, farthest.nodes) : former renamed to latter
	(get.all.shortest.paths) : to argument handled natively
	* interfaces/R/src/rinterface.c (R_igraph_get_all_shortest_paths) :
	updated, to argument added
	
	* interfaces/R/igraph/R/structural.properties.R (get.diameter) : added
	(farthest.points) : added
	(get.all.shortest.paths) : to argument added
	* interfaces/R/src/rinterface.c (R_igraph_diameter) : updated
	(R_igraph_get_diameter) : added
	(R_igraph_farthest_points) : added

	* interfaces/R/igraph/R/structural.properties.R (get.shortest.paths) :
	to argument added
	* interfaces/R/src/rinterface.c (R_igraph_get_shortest_paths) : 
	updated

2006-03-08  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/games.R (aging.prefatt.game) : rewritten,
	does not work yet

2006-03-06  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/games.R (ba.game) : bug corrected

	* interfaces/R/igraph/R/measure.dynamics.R (measure.dynamics.idage) :
	error estimation added
	* interfaces/R/src/rinterface.c (R_igraph_measure_dynamics_idage)
	(R_igraph_measure_dynamics_idage_debug) : error estimation added
