@@ -1,3 +1,8 @@
+2006-03-31  Gabor Csardi  <csardi@kzoo.edu>
+
+	* interfaces/R/src/rinterface.c (USE_RINTERNALS) : define this,
+	it is required to access some macros in some R versions
+
 2006-03-22  Gabor Csardi  <csardi@rmki.kfki.hu>
 
 	* interfaces/R/igraph/R/measure.dynamics.R (measure.dynamics.id) :
